[package]
name = "dexuse"
version = "0.1.0"
edition = "2024"
description = "Rich terminal usage explorer for OpenAI Codex and Hermes sessions"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = { version = "0.29", features = ["all-widgets"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-big-text = "0.7"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
